# CS100_HW8-9

./: CMakeLists.txt  ufo_sightings.ipynb
src/: main.cpp
src/PartForYou/: Alphatron.cpp  Alphatron.h  Blue_Bullet.cpp  Blue_Bullet.h  Dawnbreaker.cpp  Dawnbreaker.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  GameObjects.cpp  GameObjects.h  GameWorld.cpp  GameWorld.h  Goodie.cpp  Goodie.h  HP_Restore_Goodie.cpp  HP_Restore_Goodie.h  Meteor.cpp  Meteor.h  Meteor_Goodie.cpp  Meteor_Goodie.h  Omegatron.cpp  Omegatron.h  Power_Up_Goodie.cpp  Power_Up_Goodie.h  Red_Bullet.cpp  Red_Bullet.h  Sigmatron.cpp  Sigmatron.h  Star.cpp  Star.h
src/ProvidedFramework/: ObjectBase.h
